boreal/tests/assets/invalid_files/compilation/invalid_identifier_call.yar
// [error: invalid arguments types: [integer]]
import "math"

rule a {
    condition:
        math.to_number(2) == 3
}
